# digit_recognizer

./: .gitignore  .isort.cfg  README.md  index.html  mypy.ini  pyproject.toml
frontend/: index.html  main.js  model_information.html  style.css
frontend/models_tfjs/: model.json  model_1.json
src/: create_new_data.py  digit_recognizer.py  digit_recognizer_test.py
