[tool.poetry]
name = "digit_recognizer"
version = "0.1.0"
description = "charlottee's handwritten digit recognizer"
authors = ["anna-charlotte <chgerhaher@yahoo.com>"]

[tool.poetry.dependencies]
python = "3.8.10"
numpy = "^1.23.1"
pandas = "^1.4.3"
metriculous = "^0.3.0"
keras = "^2.9.0"
tensorflow = "^2.9.1"
matplotlib = "^3.5.2"

[tool.poetry.dev-dependencies]
black = "^22.6.0"
isort = "^5.10.1"
mypy = "^0.971"
pytest = "^7.1.2"

[tool.black]
line-length = 100

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
